--- a/src/scss/assets/pattern.scss
+++ b/src/scss/assets/pattern.scss
@@ -46,18 +46,36 @@ body {
    padding-bottom: 10px;
    margin-bottom: 20px;
    font-weight: 900;
-   font-size: 32px;
+   font-size: 20px;
    text-transform: uppercase;
    text-decoration: underline;
    text-decoration-color: var(--color-yellow);
    text-decoration-thickness: 8px;
    text-underline-offset: 8px;
+   text-align: center;
+
+   @media (min-width:780px) {
+      text-align: start;
+      font-size: 32px;
+   }
+
+   @media (min-width:1120px) {
+      font-size: 38px;
+   }
 }
 
 .text-section {
    font-weight: 500;
-   font-size: 16px;
+   font-size: 12px;
    line-height: 137%;
+
+   @media (min-width:780px) {
+      font-size: 14px;
+   }
+
+   @media (min-width:1120px) {
+      font-size: 16px;
+   }
 }
 
 .button {
@@ -69,7 +87,6 @@ body {
    font-weight: 700;
    font-size: 14px;
    letter-spacing: 0.1em;
-
    display: flex;
    align-items: center;
    justify-content: center;
@@ -81,13 +98,37 @@ body {
    }
 }
 
+.button-transparent {
+   padding: 11px 16px;
+   display: inline-flex;
+   align-items: center;
+   justify-content: center;
+   gap: 10px;
+   border-radius: 4px;
+   border: 2px solid var(--border-color, var(--color-black));
+   min-height: 62px;
+   font-weight: 700;
+   font-size: 16px;
+   letter-spacing: 0.1em;
+   text-transform: uppercase;
+   background-color: var(--background-button, transparent);
+}
+
 .input-text-name {
    display: block;
    margin-bottom: 8px;
    padding-left: 9px;
    font-weight: 500;
-   font-size: 14px;
    line-height: 129%;
+   font-size: 12px;
+
+   @media (min-width:780px) {
+      font-size: 14px;
+   }
+
+   @media (min-width:1120px) {
+      font-size: 16px;
+   }
 }
 
 .input-text {
