--- a/src/scss/assets/footer.scss
+++ b/src/scss/assets/footer.scss
@@ -1,1 +1,34 @@
 @use '../assets/variablesSCSS.scss' as *;
+
+
+.footer {
+   padding-top: 50px;
+   padding-bottom: 50px;
+   background-color: var(--color-yellow);
+   font-weight: 500;
+   font-size: 16px;
+   line-height: 137%;
+
+   &__container {}
+
+   &__body {
+      display: flex;
+      gap: 27px;
+   }
+
+   &__logo {
+      width: 185px;
+   }
+
+   &__privacy-policy {
+      flex: 1 1 auto;
+
+      a {
+         display: block;
+         text-decoration: underline;
+         text-underline-offset: 3px;
+      }
+   }
+
+   &__copyright {}
+}
