--- a/src/scss/assets/root_var.scss
+++ b/src/scss/assets/root_var.scss
@@ -5,7 +5,7 @@
    --color-white-08: rgba(255, 255, 255, 0.8);
    --color-smoky-white: #f6f6f6;
    --color-black: #1b2124;
-
+   --color-gainsborough: #dfdfdf;
 
 
    --color-yellow: #faba22;
