--- a/src/scss/others/info-block.scss
+++ b/src/scss/others/info-block.scss
@@ -3,40 +3,66 @@
 
    &__container {}
 
-   &__title {}
-
    &__text {
       margin-bottom: 54px;
       max-width: 830px;
    }
 
    &__sub-title {
-      margin-bottom: 60px;
+      margin-bottom: 46px;
       font-weight: 700;
-      font-size: 28px;
-      line-height: 79%;
+      font-size: 16px;
+      line-height: 137%;
+
+      @media (min-width:780px) {
+         margin-bottom: 52px;
+         font-size: 20px;
+      }
+
+      @media (min-width:1120px) {
+         margin-bottom: 60px;
+         font-size: 28px;
+      }
    }
 
    &__grid {
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 100px;
-   }
+      grid-template-columns: 1fr;
+      gap: 35px;
 
-   &__cell {}
+      @media (min-width:780px) {
+         grid-template-columns: repeat(3, 1fr);
+         gap: 100px;
+      }
+   }
 
    &__cell-image {
       text-align: center;
 
       img {
-         width: 150px;
+         width: 120px;
+
+         @media (min-width:780px) {
+            width: 150px;
+         }
       }
    }
 
    &__cell-text {
+      margin: 0 auto;
       font-weight: 700;
-      font-size: 16px;
+      font-size: 12px;
       line-height: 137%;
       text-align: center;
+      max-width: 205px;
+
+      @media (min-width:780px) {
+         font-size: 14px;
+         max-width: none;
+      }
+
+      @media (min-width:1120px) {
+         font-size: 16px;
+      }
    }
 }
