--- a/src/scss/assets/header.scss
+++ b/src/scss/assets/header.scss
@@ -2,6 +2,11 @@
 
 
 .header {
+   position: sticky;
+   top: 0;
+   left: 0;
+   z-index: 5;
+   overflow: hidden;
 
    &__border {
       padding: 20px 0;
@@ -10,11 +15,14 @@
       min-height: 89px;
       display: flex;
       align-items: center;
-      border-radius: 6px;
-      box-shadow: 0 15px 40px -20px rgba(0, 0, 0, 0.15);
       background-color: var(--color-white-08);
-      backdrop-filter: blur(9.7px);
-      --weblit-backdrop-filter: blur(9.7px);
+
+      @media (min-width:1120px) {
+         border-radius: 6px;
+         backdrop-filter: blur(9.7px);
+         --weblit-backdrop-filter: blur(9.7px);
+         box-shadow: 0 15px 40px -20px rgba(0, 0, 0, 0.15);
+      }
    }
 
    &__container {}
@@ -46,6 +54,7 @@
       a {
          display: flex;
          align-items: center;
+         flex-direction: row-reverse;
          gap: 6px;
       }
 
@@ -53,6 +62,19 @@
       a svg {
          max-width: 15px;
          max-height: 15px;
+      }
+   }
+
+   &__button {
+      margin-left: auto;
+      display: none;
+
+      @media (min-width:780px) {
+         display: block;
+      }
+
+      @media (min-width:1120px) {
+         margin-left: 0;
       }
    }
 }
