--- a/src/scss/assets_template/button-menu.scss
+++ b/src/scss/assets_template/button-menu.scss
@@ -1,36 +1,48 @@
-.button-menu {
+.open-menu {
    position: relative;
-   width: 30px;
-   height: 30px;
+   width: 40px;
+   height: 18px;
+   z-index: 30;
 
-   // .is-open-menu & {
-   //    display: none;
-   // }
-
-   @media (min-width:1024px) {
-      //  display: none;
+   @media (min-width:1120px) {
+      display: none;
    }
 }
 
 .line {
    position: absolute;
-   left: 0;
-   height: 4px;
+   top: 50%;
+   left: 50%;
+   height: 2px;
+   width: 100%;
    background-color: var(--color-black, #000000);
+   transition: opacity 0.3s, transform 0.3s;
 }
 
 .line-top {
-   top: 4px;
-   width: 100%;
+   transform: translate(-50%, calc(-50% - 8px));
 }
 
 .line-center {
-   top: 50%;
-   transform: translateY(-50%);
-   width: 23px;
+   transform: translate(-50%, -50%);
 }
 
 .line-bottom {
-   bottom: 4px;
-   width: 14px;
+   transform: translate(-50%, calc(-50% + 8px));
+}
+
+.menu-is-open {
+   overflow: hidden;
+
+   .line-top {
+      transform: translate(-50%, -50%) rotate(45deg);
+   }
+
+   .line-center {
+      opacity: 0;
+   }
+
+   .line-bottom {
+      transform: translate(-50%, -50%) rotate(-45deg);
+   }
 }
