--- a/src/scss/others/contacts.scss
+++ b/src/scss/others/contacts.scss
@@ -8,17 +8,41 @@
 
    &__body {
       display: flex;
-      gap: 40px;
+      flex-direction: column;
+      gap: 30px;
+
+      @media (min-width:780px) {
+         flex-direction: row;
+      }
+
+      @media (min-width:1120px) {
+         gap: 40px;
+      }
    }
 
    &__info {
-      flex: 0 0 360px;
+      // flex: 0 1 360px;
+      display: flex;
+      gap: 20px;
       font-weight: 500;
-      font-size: 16px;
-      line-height: 137%
+      font-size: 12px;
+      line-height: 137%;
+
+      @media (min-width:780px) {
+         display: block;
+         font-size: 14px;
+      }
+
+      @media (min-width:1120px) {
+         font-size: 16px;
+      }
    }
 
    &__address {
+      flex: 1 1 auto;
+   }
+
+   &__address-item {
       margin-bottom: 25px;
    }
 
@@ -27,10 +51,16 @@
    }
 
    &__social {
-      margin-top: 25px;
       display: flex;
-      gap: 21px;
+      gap: 9px;
       flex-wrap: wrap;
+      flex-direction: column;
+
+      @media (min-width:780px) {
+         margin-top: 25px;
+         flex-direction: row;
+         gap: 21px;
+      }
    }
 
    &__map {
@@ -40,6 +70,7 @@
       iframe {
          width: 100%;
          height: 100%;
+         min-height: 258px;
       }
    }
 }
