--- a/src/scss/others/first-screen.scss
+++ b/src/scss/others/first-screen.scss
@@ -1,5 +1,6 @@
 .first-screen {
    margin-bottom: 94px;
+   overflow: hidden;
 
    &__container {}
 
@@ -24,6 +25,10 @@
       width: 100%;
       object-fit: cover;
       transition: right 0.4s;
+
+      .show-background & {
+         right: 0;
+      }
    }
 
    &__content {
