--- a/src/scss/others/submit-application.scss
+++ b/src/scss/others/submit-application.scss
@@ -1,5 +1,13 @@
 .submit-application {
-   margin-bottom: 118px;
+   margin-bottom: 60px;
+
+   @media (min-width:780px) {
+      margin-bottom: 78px;
+   }
+
+   @media (min-width:1120px) {
+      margin-bottom: 118px;
+   }
 
    &__container {}
 
