--- a/src/scss/others/first-screen.scss
+++ b/src/scss/others/first-screen.scss
@@ -1,30 +1,54 @@
+@use '../assets/mixin.scss' as *;
+
 .first-screen {
-   margin-bottom: 94px;
-   overflow: hidden;
+   margin-bottom: 64px;
+   // overflow: hidden;
+
+   @media (min-width:1120px) {
+      margin-bottom: 74px;
+   }
+
+   @media (min-width:1120px) {
+      margin-bottom: 118px;
+   }
 
    &__container {}
 
    &__shell {
+      margin-bottom: 23px;
       position: relative;
+
+      @media (min-width:780px) {
+         margin-bottom: 0;
+      }
    }
 
    &__body {
       position: relative;
-      --offset-left: calc((var(--max-width-big-container) - var(--container-width)) / 2);
-      margin-left: calc(var(--offset-left) * -1);
-      padding-left: var(--offset-left);
       overflow: hidden;
+      min-height: calc((100vw - 48px) * 0.81);
+
+      @media (min-width:780px) {
+         --offset-left: calc((var(--max-width-big-container) - var(--container-width)) / 2);
+         margin-left: calc(var(--offset-left) * -1);
+         padding-left: var(--offset-left);
+         min-height: 409px;
+      }
    }
 
    &__background {
       position: absolute;
       top: 0;
-      right: -80%;
+      right: 0;
       z-index: -1;
       height: 100%;
-      width: 100%;
       object-fit: cover;
-      transition: right 0.4s;
+      transition: right 0.5s;
+
+      @media (min-width:780px) {
+         width: 100%;
+         right: -80%;
+      }
 
       .show-background & {
          right: 0;
@@ -32,11 +56,14 @@
    }
 
    &__content {
-      padding: 32px 20px;
-      max-width: 650px;
-      min-height: 409px;
+      @include size_adaptive (max-width, 500, 650, 780, 1120);
+
+      @media (min-width:780px) {
+         padding: 32px 20px;
+      }
 
       @media (min-width:1120px) {
+         max-width: 650px;
          padding: 32px 0 43px;
       }
    }
@@ -44,21 +71,41 @@
    &__title {
       margin-bottom: 15px;
       font-weight: 900;
-      font-size: 50px;
+      font-size: 23px;
       line-height: 120%;
       text-transform: uppercase;
+
+      @include size_adaptive (font-size, 36, 50, 780, 1120);
+
+      @media (min-width:1120px) {
+         font-size: 50px;
+      }
    }
 
    &__text {
       margin-bottom: 30px;
       font-weight: 500;
-      font-size: 16px;
+      font-size: 12px;
       line-height: 137%;
+
+      @media (min-width:780px) {
+         font-size: 14px;
+      }
+
+      @media (min-width:1120px) {
+         font-size: 16px;
+      }
    }
 
    &__button {
       --border-color: var(--color-yellow);
-      --background-button: var(--color-white);
+      --background-button: var(--color-yellow);
+      width: 100%;
+
+      @media (min-width:780px) {
+         --border-color: var(--color-yellow);
+         --background-button: var(--color-white);
+      }
 
       img,
       svg {
