--- a/src/scss/others/advantage.scss
+++ b/src/scss/others/advantage.scss
@@ -1,15 +1,36 @@
 .advantage {
-   padding-top: 72px;
-   padding-bottom: 93px;
-   margin-bottom: 67px;
+   padding-top: 31px;
+   padding-bottom: 40px;
+   margin-bottom: 28px;
 
-   &__container {}
+   @media (min-width:780px) {
+      padding-top: 53px;
+      padding-bottom: 52px;
+      margin-bottom: 70px;
+   }
+
+   @media (min-width:1120px) {
+      padding-top: 72px;
+      padding-bottom: 93px;
+   }
+
+   &__container {
+      position: relative;
+   }
 
    &__title {
-      margin-bottom: 33px;
+      position: relative;
+      z-index: 1;
+      margin-bottom: 45px;
+
+      @media (min-width:1120px) {
+         margin-bottom: 33px;
+      }
    }
 
    &__list {
+      position: relative;
+      z-index: 1;
       margin-bottom: 35px;
 
       @media (min-width:1120px) {
@@ -34,8 +55,56 @@
    }
 
    &__button {
+      position: relative;
+      z-index: 1;
+
       @media (max-width:1119.98px) {
          width: 100%;
+      }
+   }
+
+
+   &__line-1 {
+      position: absolute;
+      top: 0%;
+      left: 95%;
+      height: 161px;
+      width: 10px;
+      border-radius: 4px;
+      background-color: var(--color-black);
+      display: none;
+
+      @media (min-width:780px) {
+         display: block;
+      }
+
+      @media (min-width:1120px) {
+         top: 100%;
+         left: 47%;
+         height: 161px;
+         width: 15px;
+      }
+   }
+
+   &__line-2 {
+      position: absolute;
+      top: 0%;
+      left: 98%;
+      height: 73px;
+      width: 10px;
+      border-radius: 4px;
+      background-color: var(--color-black);
+      display: none;
+
+      @media (min-width:780px) {
+         display: block;
+      }
+
+      @media (min-width:1120px) {
+         top: 100%;
+         left: 50%;
+         height: 73px;
+         width: 15px;
       }
    }
 }
